--- a/_includes/themes/hive/page.html
+++ b/_includes/themes/hive/page.html
@@ -42,7 +42,7 @@
 				<a data-toggle="collapse" data-target=".nav-collapse" class="btn btn-navbar">
 					<span><i class="icon-reorder"></i></span>
 				</a>
-				<a class="brand">{{site.title}} - {{site.tagline}}</a>
+				<a href="index.html" class="brand">{{site.title}} - {{site.tagline}}</a>
 
                 <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target="#nav-collapse-01"></button>
                 <div class="nav-collapse collapse" id="nav-collapse-01">
