--- a/_includes/themes/hive/portfolio.html
+++ b/_includes/themes/hive/portfolio.html
@@ -2,39 +2,34 @@
 <html lang="en">
 <head>
 
-	<!-- start: Meta -->
 	<meta charset="utf-8">
-	<title>Even - Responsive portofolio at Bootstrap </title> 
-	<meta content="Responsive business at Bootstrap" name="description">
-	<meta content="flat, responsive, business" name="keywords">
-	<!-- end: Meta -->
+	<title> {{ site.title}} - {{ site.tagline }}
+        {% if page.title %}
+           :: {{ page.title }} 
+         {% endif %}
+    </title>
+    {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
+	
 	
 	<!-- start: Mobile Specific -->
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	<!-- end: Mobile Specific -->
 
     <!-- start: CSS -->
-    <link rel="stylesheet" href="assets/css/bootstrap.css">
-    <link rel="stylesheet" href="assets/css/bootstrap-responsive.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="{{ ASSET_PATH }}/bootstrap/css/bootstrap-responsive.css">
+    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/flat-ui.css">
+    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/honey.css">
     <!-- end: CSS -->
 
-    <!-- start: style switcher -->
-    <link rel="stylesheet" href="assets/css/color-1.css" class="switchable">
-    <link rel="stylesheet" href="assets/css/color-2.css" class="switchable">
-    <link rel="stylesheet" href="assets/css/color-3.css" class="switchable">
-    <link rel="stylesheet" href="assets/css/color-4.css" class="switchable">
-	<!-- end: style switcher -->
+    <!-- start: browser tab icon -->
+    <link rel="shortcut icon" href="{{ ASSET_PATH }}/images/favicon.ico">
+	<!-- end: icon -->
 
-    <!--[if IE 9]>
-		<style>.img-mask .flipper {display: none;}</style>
-	<![endif]-->  
-    <!--[if IE 8]>
-		<style>.boxy{position:relative;width:150px;height:150px;}.flipper {overflow: hidden;}.subscribe input[type="text"], .subscribe textarea {width: 35%;}.plan-background {background-position: center;background-repeat: repeat-x;border:none;} .sign-background {background-position: center;background-repeat: repeat-x;border:none;}.countdown-background {background-position: center;background-repeat: repeat-x;border:none;}.page-title {background-position: center;background-repeat: repeat-x;border:none;}.img-mask .flipper {display: none;}</style>	
-	<![endif]-->
-</head>
+	<!--  Yellow color for hive -->
+    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/color.css">
 
-<body>
+    {% include JB/analytics %}
 
 <header id="header">
 
@@ -45,46 +40,46 @@
 				<a data-toggle="collapse" data-target=".nav-collapse" class="btn btn-navbar">
 					<span><i class="icon-reorder"></i></span>
 				</a>
-				<a class="btn btn-navbar" href="sign-in.html"><i class="icon-signin"></i></a>
+				<a class="brand">{{site.title}} - {{site.tagline}}</a>
 
-				<a class="brand" href="index.html">even</a>
-
-				<div id="top-navigation" class="nav-collapse subnav-collapse collapse ">
-					<ul class="nav pull-right">
-						<li class="active">
-							<a href="index.html">Home</a>
-						</li>
-						<li class="dropdown">
-							<a data-toggle="dropdown" class="dropdown-toggle" href="#">Pages<b class="caret"></b></a>
-							<ul class="dropdown-menu">
-								<li><a href="portfolio.html">Portfolio</a></li>
-								<li><a href="portfolio-item.html">Portfolio item</a></li>
-								<li><a href="features.html">Features</a></li>
-								<li><a href="sign-in.html">Sign in</a></li>
-								<li><a href="sign-up.html">Sign up</a></li>
-								<li><a href="password.html">Reset password</a></li>
-								<li><a href="plan.html">Plan</a></li>
-								<li><a href="blog-post.html">Blog</a></li>
-								<li><a href="post.html">Blog item</a></li>								
-								<li><a href="coming-soon.html">Comming Soon</a></li>
-								<li><a href="404.html">404 error</a></li>														
-							</ul>
-						</li>
-						<li class=""><a href="about.html">About Us</a></li>
-						<li class=""><a href="features.html">Features</a></li>
-						<li class=""><a href="plan.html">Plan</a></li>
-						<li class=""><a href="blog-post.html">Blog</a></li>
-						<li class=""><a href="contact.html">Contact</a></li>
-						<li class="top-account visible-desktop"><a class="top-sign-up" href="sign-up.html">Sign UP</a></li>
-						<li class="top-account visible-desktop"><a class="top-sign-in" href="sign-in.html">Sign In</a></li>
-					</ul>
-				</div>	
-		
+                <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target="#nav-collapse-01"></button>
+                <div class="nav-collapse collapse" id="nav-collapse-01">
+                  <ul class="nav">
+                    {% for item in page.navbar %}
+					<li>
+                      <a href="{{item.link}}">
+                         {{item.name}} 
+			 			 {% if item.menu != null %}
+						 <b class="caret"></b>
+			 			 {% endif %}
+                      </a>
+		 			  {% if item.menu != null %}
+                        <ul>
+                        {% for subitem in item.menu %}
+						<li><a href="{{subitem.link}}">{{subitem.label}}</a>
+                          {% if subitem.submenu != null %}
+                            <ul>
+                              {% for subsubitem in subitem.submenu %}
+                                <li><a href="{{subsubitem.link}}">{{subsubitem.label}}</a></li>
+                              {% endfor %}
+                            </ul> <!-- /Sub menu -->
+                          {% endif %}
+						  </li>
+                        {% endfor %}
+                        </ul>
+                      {% endif %}
+                    </li>
+					{% endfor %}
+                  </ul>
+                </div><!-- nav -->
 			</div>
 		</div>
 	</div><!--end: navbar -->
-
 </header>
+
+</head>
+
+
 <!-- start: title -->
 <div class="page-title">
 	<div class="section-wrapper">
